# subtle

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/console/: mod.rs  progress_bar.rs  select.rs
src/io/: mod.rs
src/services/: mod.rs  opensubtitles.rs  subdb.rs
src/terminal/: emojis.rs  mod.rs  progress_bar.rs  select.rs
