[package]
name = "subtle"
version = "1.0.0"
authors = ["Alican Erdogan <aerdogan07@gmail.com>"]
edition = "2021"

[dependencies]
indicatif = "0.17.3"
clap = { version = "4.1.11", features = ["cargo"] }
dialoguer = "0.10.3"
reqwest = { version = "0.11.15", features = ["json"] }
xmlrpc = "0.15.1"
console = "0.15.5"
regex = "1.7.2"
serde = { version = "1.0.158", features = ["derive"] }
urlencoding = "2.1.2"
strsim = "0.10.0"

[profile.release]
lto = true # Link Time Optimization
opt-level = 'z' # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization

# Don't forget to strip symbol info: strip target/release/gistr
